--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^4.11.0",
     "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.17.0",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0"
   },
